@@ -16,6 +16,8 @@ ChangeLog
 =========
     
 2009???? - 1.23.91
+
+[+] * PostgreSQL backend now supports IDs for RunOnReceive.
     
 20090311 - 1.23.90
 
